Bug 561467 - [15] JEP 378: Text Blocks (Standard)
Change-Id: I54ccb0f632ccba2cff6d66be0c31d888fb21995e
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>